<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_edit_audio"
        android:title="@string/edit_audio"
        android:icon="@drawable/ic_content_cut"
        app:showAsAction="never" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_transcribe"
        android:title="@string/transcribe"
        android:icon="@drawable/ic_mic"
        app:showAsAction="never" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_markers"
        android:title="@string/markers"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="never" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_quick_share"
        android:title="@string/quick_share"
        android:icon="@drawable/ic_share"
        app:showAsAction="never" />

    <item
        style="@style/AppTheme.MenuItem"
        android:id="@+id/action_export"
        android:title="@string/export"
        android:icon="@drawable/ic_library_music"
        app:showAsAction="never" />
</menu>
