<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding"
    android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/locationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_location_message" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/highQualitySwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_quality_high" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filenameTemplateButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/settings_filename_template" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/storageFolderButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/settings_storage_folder" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transcriptionButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:text="@string/settings_transcription" />

</LinearLayout>
