<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/AppTheme.RecordTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintBottom_toTopOf="@id/recordingWaveFormView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/main_sound_action" />

    <TextView
        android:id="@+id/elapsedTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        tools:text="12:34"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        style="@style/Widget.Material3.FloatingActionButton.Large.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        android:contentDescription="@string/main_sound_action"
        android:src="@drawable/ic_mic"
        app:backgroundTint="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="?attr/colorOnSurface" />

    <LinearLayout
        android:id="@+id/markerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/importantMarkerButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/marker_important" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/segmentMarkerButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marker_segment" />

    </LinearLayout>

    <org.lineageos.recorder.ui.WaveFormView
        android:id="@+id/recordingWaveFormView"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxAudioValue="@integer/max_audio_value"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/pauseResumeImageView"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@null"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/floatingActionButton"
        app:layout_constraintEnd_toStartOf="@id/floatingActionButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/floatingActionButton"
        app:tint="?attr/colorOnBackground"
        tools:src="@drawable/avd_pause_to_play"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/openSoundListImageView"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/sound_last_title"
        android:src="@drawable/ic_library_music"
        app:layout_constraintBottom_toBottomOf="@id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/settingsImageView"
        app:layout_constraintTop_toTopOf="@id/floatingActionButton"
        app:tint="?attr/colorOnBackground" />

    <ImageView
        android:id="@+id/settingsImageView"
        style="@style/AppTheme.ImageButton"
        android:contentDescription="@string/sound_last_title"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="@id/floatingActionButton"
        app:layout_constraintEnd_toStartOf="@+id/openSoundListImageView"
        app:layout_constraintStart_toEndOf="@id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@id/floatingActionButton"
        app:tint="?attr/colorOnBackground" />

</androidx.constraintlayout.widget.ConstraintLayout>
